<resources>
    <string name="app_name">ASM_PS28372</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--    Welcome screen title and des-->
    <string name="title_1">Title 1</string>
    <string name="des_1">Des 1</string>
    <string name="title_2">Title 2</string>
    <string name="des_2">Des 2</string>
    <string name="title_3">Title 3</string>
    <string name="des_3">Des 3</string>
    <string name="title_4">Title 4</string>
    <string name="des_4">Des 4</string>
    <string name="welcome_back">Chào mừng bạn trở lại,</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="user_email">Email...</string>
    <string name="password">Mật khẩu...</string>
    <string name="remember_me">Lưu đăng nhập</string>
    <string name="no_account">Chưa có tài khoản?</string>
    <string name="signup_now">Đăng ký ngay</string>
    <string name="login">Đăng nhập</string>
    <string name="dang_ky">Đăng ký</string>
    <string name="re_enter_pw">Nhập lại mật khẩu...</string>
    <string name="already_have_account">Đã có tài khoản?</string>
    <string name="login_now">Đăng nhập ngay</string>

</resources>