<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bk"
    tools:context=".LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/welcome_back"
            android:textColor="@color/Logo_BG"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/dang_nhap"
            android:textColor="@color/Logo_BG"
            android:textSize="50sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/user_email"
            app:counterEnabled="true"
            app:helperText="Nhập email của bạn *"
            app:helperTextTextColor="@color/Red">

            <EditText
                android:id="@+id/edtLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            app:counterEnabled="true"
            app:endIconMode="password_toggle"
            app:helperText="Ít nhất 6 ký tự, gồm A-Z, a-z, 0-9 *"
            app:helperTextTextColor="@color/Red">

            <EditText
                android:id="@+id/edtLoginPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/roboto"
                android:inputType="textPassword"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/chkRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/remember_me"
            android:textSize="15sp" />

        <RelativeLayout
            android:id="@+id/btnLogin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_bg_ripple"
            android:clickable="true">

            <TextView
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="end"
                android:fontFamily="@font/roboto"
                android:text="@string/login"
                android:textColor="@color/camdat"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btnAnimation"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_colorFilter="@color/camdat"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/loading_blue"

                />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/no_account"
            android:textColor="@color/Logo_BG"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtSignupNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:fontFamily="@font/roboto"
            android:text="@string/signup_now"
            android:textColor="@color/Logo_BG"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>