<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bk"
    tools:context=".SignupScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/dang_ky"
            android:textColor="@color/Logo_BG"
            android:textSize="50sp" />


        <EditText
            android:id="@+id/edtSignupEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/user_email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSignupPw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/edtSingupRePw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/roboto"
            android:hint="@string/re_enter_pw"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"

            />

        <RelativeLayout
            android:id="@+id/btnSignup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_bg_ripple">

            <TextView
                android:id="@+id/btnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/roboto"
                android:text="@string/dang_ky"
                android:textColor="@color/camdat"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/btnAnimation"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                app:lottie_rawRes="@raw/loading_blue"
                app:lottie_colorFilter="@color/camdat"
                android:visibility="gone"
                app:lottie_autoPlay="false"
                app:lottie_loop="true" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/already_have_account"
            android:textColor="@color/Logo_BG"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtLoginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/login_now"
            android:textColor="@color/Logo_BG"
            android:textSize="25sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>